# hacky-cmake-cpp-template

./: CMakeLists.txt  README.md  configure_project.js  init  init_project.cpp  main.cpp  makefile
src/: CMakeLists.txt  utils.hpp
src/<EXEC>/: CMakeLists.txt  main.cpp
src/include/: CMakeLists.txt
src/shared/: CMakeLists.txt
